implement map filtering and sorting logic